--- a/css/style.css
+++ b/css/style.css
@@ -491,6 +491,7 @@ img {
 }
 .footer-data {
   display: flex;
+  justify-content: space-between;
   align-items: baseline;
 }
 .footer-data-logo {
@@ -513,4 +514,108 @@ img {
 }
 .footer-social-icon .footer-list-item {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.subscribe-form {
+  display: flex;
+  gap: 24px;
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5; /* 150% */
+  letter-spacing: 0.64px;
+}
+.subscribe-text {
+  color: #fff;
+  margin-bottom: 16px;
+}
+.subscribe-form input {
+  height: 40px;
+  width: 264px;
+  padding-top: 8px;
+  padding-left: 16px;
+  padding-bottom: 8px;
+  border-radius: 4px;
+  border: 1px solid #fff;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  color: #fff;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 2; /* 200% */
+  letter-spacing: 0.48px;
+  background-color: transparent;
+}
+.subscribe-form-input::placeholder {
+  color: #fff;
+}
+.contact-form-btn {
+  border: none;
+  outline: none;
+  padding: 8px 0 8px 24px;
+}
+.contact-form-btn {
+  color: #fff;
+  text-align: center;
+
+  /* Button Text */
+
+  height: 40px;
+  display: inline-flex;
+  padding: 8px 24px;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  border-radius: 4px;
+  background: #4d5ae5;
+}
+/* FORM*/
+.contact-form {
+  width: 408px;
+  min-height: 584px;
+  padding: 24px;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 4px;
+  background-color: #fcfcfc;
+}
+.contact-form-input {
+  display: flex;
+  gap: 26px;
+  padding-left: 38px;
+  width: 100%;
+  height: 40px;
+  border-radius: 4px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+}
+.contact-form-btn {
+  color: #fff;
+  padding: 16px 32px;
+  border-radius: 4px;
+  background: #4d5ae5;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  color: var(--WHITE, #fff);
+  text-align: center;
+
+  /* Button Text */
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5; /* 150% */
+  letter-spacing: 0.64px;
+}
+.contact-form-header {
+  color: #2e2f42;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5; /* 150% */
+  letter-spacing: 0.32px;
+}
+.contact-form-label {
+  display: block;
+  color: #8e8f99;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.16; /* 116.667% */
+  letter-spacing: 0.48px;
+  padding-bottom: 4px;
 }
