--- a/css/style.css
+++ b/css/style.css
@@ -568,32 +568,56 @@ img {
   border-radius: 4px;
   background: #4d5ae5;
 }
+
+/* BACKDROP */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 99999;
+  background-color: rgba(46, 47, 66, 0.4);
+  padding-top: 80px;
+  padding-bottom: 12px;
+}
+
 /* FORM*/
 .contact-form {
+  position: relative;
   width: 408px;
   min-height: 584px;
-  padding: 24px;
+  padding-left: 24px;
+  padding-right: 24px;
+  padding-top: 72px;
   margin-left: auto;
   margin-right: auto;
   border-radius: 4px;
   background-color: #fcfcfc;
 }
+
 .contact-form-input {
+  display: block;
+  max-width: 360px;
   display: flex;
   gap: 26px;
+  padding: 0;
   padding-left: 38px;
+  margin: 0 auto;
   width: 100%;
   height: 40px;
   border-radius: 4px;
   border: 1px solid rgba(46, 47, 66, 0.4);
+  margin-bottom: 8px;
 }
+
 .contact-form-btn {
   color: #fff;
   padding: 16px 32px;
   border-radius: 4px;
   background: #4d5ae5;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-  color: var(--WHITE, #fff);
+  color: #fff;
   text-align: center;
 
   /* Button Text */
@@ -609,6 +633,7 @@ img {
   font-weight: 500;
   line-height: 1.5; /* 150% */
   letter-spacing: 0.32px;
+  margin-bottom: 16px;
 }
 .contact-form-label {
   display: block;
@@ -618,4 +643,19 @@ img {
   line-height: 1.16; /* 116.667% */
   letter-spacing: 0.48px;
   padding-bottom: 4px;
+}
+.contact-form-message {
+  width: 100%;
+  height: 100%;
+  padding: 15px;
+  margin-bottom: 20px;
+  border-radius: 4px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  resize: none;
+}
+.contact-form-message::placeholder {
+  color: rgba(46, 47, 66, 0.4);
+  font-size: 12px;
+  line-height: 1.16; /* 116.667% */
+  letter-spacing: 0.48px;
 }
