--- a/css/style.css
+++ b/css/style.css
@@ -580,6 +580,8 @@ img {
   background-color: rgba(46, 47, 66, 0.4);
   padding-top: 80px;
   padding-bottom: 12px;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* FORM*/
