--- a/css/style.css
+++ b/css/style.css
@@ -587,17 +587,24 @@ img {
 /* FORM*/
 .modal {
   position: absolute;
-}
-.contact-form {
-  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
   width: 408px;
   min-height: 584px;
+  background: #fcfcfc;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.contact-form {
   padding-left: 24px;
   padding-right: 24px;
   padding-top: 72px;
   margin-left: auto;
   margin-right: auto;
-  border-radius: 4px;
+
   background-color: #fcfcfc;
 }
 
@@ -663,4 +670,8 @@ img {
   font-size: 12px;
   line-height: 1.16; /* 116.667% */
   letter-spacing: 0.48px;
+}
+.modal-close-btn {
+  height: 24px;
+  width: 24px;
 }
