--- a/css/style.css
+++ b/css/style.css
@@ -653,7 +653,7 @@ img {
   color: #8e8f99;
   font-size: 12px;
   font-weight: 400;
-  line-height: 1.16; /* 116.667% */
+  line-height: 1.17; /* 116.667% */
   letter-spacing: 0.48px;
   padding-bottom: 4px;
 }
@@ -701,4 +701,7 @@ img {
 
 .icon-close {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form-container {
+  margin-bottom: 8px;
 }
