--- a/css/style.css
+++ b/css/style.css
@@ -654,8 +654,8 @@ img {
   font-size: 12px;
   font-weight: 400;
   line-height: 1.17; /* 116.667% */
-  letter-spacing: 0.48px;
-  padding-bottom: 4px;
+  letter-spacing: 0.04em;
+  margin-bottom: 4px;
 }
 .contact-form-message {
   width: 100%;
@@ -704,4 +704,7 @@ img {
 }
 .form-container {
   margin-bottom: 8px;
+}
+.contact-form-input {
+  position: relative;
 }
