added icons to the input fields

--- a/css/style.css
+++ b/css/style.css
@@ -707,4 +707,22 @@ img {
 }
 .contact-form-input {
   position: relative;
+  width: 100%;
+  background-color: transparent;
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contact-form-input:focus {
+  border-color: #4d5ae5;
+}
+.icon {
+  position: absolute;
+  left: 16px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.contact-form-input:focus .icon {
+  fill: #4d5ae5;
 }
