--- a/css/style.css
+++ b/css/style.css
@@ -702,7 +702,7 @@ img {
 .icon-close {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.form-container {
+.form-container-for-input {
   margin-bottom: 8px;
 }
 .contact-form-input {
@@ -716,7 +716,7 @@ img {
 .contact-form-input:focus {
   border-color: #4d5ae5;
 }
-.icon {
+.icon-form-input {
   position: absolute;
   left: 16px;
   top: 50%;
