--- a/css/style.css
+++ b/css/style.css
@@ -659,12 +659,22 @@ img {
 }
 .contact-form-message {
   width: 100%;
-  height: 100%;
-  padding: 15px;
+  height: 120px;
+  font-size: 12px;
+  padding: 8px 16px;
   margin-bottom: 20px;
   border-radius: 4px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   resize: none;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+  background-color: transparent;
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.contact-form-message:focus {
+  border-color: #4d5ae5;
 }
 .contact-form-message::placeholder {
   color: rgba(46, 47, 66, 0.4);
@@ -704,6 +714,7 @@ img {
 }
 .form-container-for-input {
   margin-bottom: 8px;
+  margin-bottom: 16px;
 }
 .contact-form-input {
   position: relative;
@@ -725,4 +736,6 @@ img {
 }
 .contact-form-input:focus .icon {
   fill: #4d5ae5;
+}
+.form-checkbox {
 }
