changed checkbox properties

--- a/css/style.css
+++ b/css/style.css
@@ -738,4 +738,13 @@ img {
   fill: #4d5ae5;
 }
 .form-checkbox {
+  margin-bottom: 24px;
+}
+.form-checkbox-input {
+}
+.form-checkbox-label {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
 }
