--- a/css/style.css
+++ b/css/style.css
@@ -722,7 +722,9 @@ img {
   outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
+.contact-form-input:focus .icon-form-input {
+  fill: #4d5ae5;
+}
 .contact-form-input:focus {
   border-color: #4d5ae5;
 }
@@ -746,4 +748,20 @@ img {
   line-height: 1.17;
   letter-spacing: 0.04em;
   color: #8e8f99;
+}
+.form-container-for-input {
+  margin-bottom: 16px;
+}
+.form-checkbox-span {
+  width: 16px;
+  height: 16px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
 }
