--- a/css/style.css
+++ b/css/style.css
@@ -730,12 +730,13 @@ img {
 }
 .icon-form-input {
   position: absolute;
-  left: 16px;
   top: 50%;
+  left: 16px;
+
   transform: translateY(-50%);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.contact-form-input:focus .icon {
+.contact-form-input:focus .icon-form-input {
   fill: #4d5ae5;
 }
 .form-checkbox {
@@ -764,4 +765,15 @@ img {
   align-items: center;
   justify-content: center;
   fill: transparent;
+}
+.contact-form-input-container {
+  position: relative;
+}
+.form-checkbox-input:checked .form-checkbox-span {
+  background-color: #404bbf;
+  border: none;
+  fill: #f4f4fd;
+}
+.privacy-policy {
+  color: #4d5ae5;
 }
