--- a/css/style.css
+++ b/css/style.css
@@ -629,9 +629,14 @@ img {
   padding: 16px 32px;
   border-radius: 4px;
   background: #4d5ae5;
+  height: 56px;
+  display: block;
+  min-width: 169px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   color: #fff;
   text-align: center;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   /* Button Text */
   font-size: 16px;
