--- a/css/style.css
+++ b/css/style.css
@@ -532,7 +532,7 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
-.subscribe-form input {
+.subscribe-form-input {
   height: 40px;
   width: 264px;
   padding-top: 8px;
