--- a/css/style.css
+++ b/css/style.css
@@ -738,15 +738,15 @@ img {
 .contact-form-input:focus {
   border-color: #4d5ae5;
 }
+
 .icon-form-input {
   position: absolute;
   top: 50%;
   left: 16px;
-
   transform: translateY(-50%);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.contact-form-input:focus .icon-form-input {
+.contact-form-input:focus + .icon-form-input {
   fill: #4d5ae5;
 }
 .form-checkbox {
@@ -760,9 +760,7 @@ img {
   letter-spacing: 0.04em;
   color: #8e8f99;
 }
-.form-container-for-input {
-  margin-bottom: 16px;
-}
+
 .form-checkbox-span {
   width: 16px;
   height: 16px;
@@ -779,7 +777,7 @@ img {
 .contact-form-input-container {
   position: relative;
 }
-.form-checkbox-input:checked .form-checkbox-span {
+.form-checkbox-input:checked + .form-checkbox-span {
   background-color: #404bbf;
   border: none;
   fill: #f4f4fd;
