added changes to footer

--- a/css/style.css
+++ b/css/style.css
@@ -725,6 +725,9 @@ img {
 .form-container-for-input {
   margin-bottom: 8px;
 }
+.form-container-for-input:nth-child(4) {
+  margin-bottom: 16px;
+}
 .contact-form-input {
   position: relative;
   width: 100%;
