--- a/css/style.css
+++ b/css/style.css
@@ -780,7 +780,7 @@ img {
 .contact-form-input-container {
   position: relative;
 }
-.contact-form-input:checked {
+.form-checkbox-span:checked {
   background-color: #404bbf;
   border: none;
   fill: #f4f4fd;
