--- a/css/style.css
+++ b/css/style.css
@@ -465,6 +465,7 @@ img {
   text-decoration: none;
 }
 .footer-social {
+  margin-right: 80px;
   color: white;
   font-weight: 500;
   line-height: 1.5;
@@ -491,7 +492,6 @@ img {
 }
 .footer-data {
   display: flex;
-  justify-content: space-between;
   align-items: baseline;
 }
 .footer-data-logo {
@@ -579,8 +579,6 @@ img {
   height: 100%;
   z-index: 99999;
   background-color: rgba(46, 47, 66, 0.4);
-  padding-top: 80px;
-  padding-bottom: 12px;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -601,12 +599,6 @@ img {
   padding: 72px 24px 24px 24px;
 }
 .contact-form {
-  padding-left: 24px;
-  padding-right: 24px;
-  padding-top: 72px;
-  margin-left: auto;
-  margin-right: auto;
-  background-color: #fcfcfc;
 }
 
 .contact-form-input {
@@ -630,7 +622,6 @@ img {
   align-items: center;
   font-family: "Roboto", sans-serif;
   color: #fff;
-  padding: 16px 32px;
   border-radius: 4px;
   background: #4d5ae5;
   height: 56px;
@@ -668,11 +659,11 @@ img {
   margin-bottom: 4px;
 }
 .contact-form-message {
+  display: block;
   width: 100%;
   height: 120px;
   font-size: 12px;
   padding: 8px 16px;
-  margin-bottom: 20px;
   border-radius: 4px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   resize: none;
@@ -776,6 +767,7 @@ img {
   align-items: center;
   justify-content: center;
   fill: transparent;
+  margin-right: 8px;
 }
 .contact-form-input-container {
   position: relative;
@@ -792,4 +784,6 @@ img {
   display: block;
   min-width: 169px;
   height: 56px;
+  margin-left: auto;
+  margin-right: auto;
 }
